@@ -148,7 +148,6 @@ if test x$enable_dependency_tracking = xyes ; then
   [(cd "$srcdir" && find . '(' -name '*.c' -o -name '*.cxx' ')' -print) \
  | sed 's/\.cx*$//' | (while read f; do \
       test -f "$f.o.d" || echo > "$f.o.d"; \
-      test -f "$f.po.d" || echo > "$f.po.d"; \
    done)
 ])
 fi
